# src/application/dtos/wishlist.dto.ts
@@ -1,3 +1,9 @@
+import { ProductInfoDTO } from "./product.dto";
+
 export interface ProductWishlistDTO {
     productId: string,
+}
+
+export interface WishlistDTO {
+    products: ProductInfoDTO[];
 }
